--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Talk Minion</h1>
+    <button class="js-btn">Click</button>
     <script src="index.js"></script>
   </body>
 </html>
