wiring textarea input

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>Minion Language</title>
+    <style>
+      textarea {
+        display: block;
+        width: 90%;
+        height: 10vh;
+        padding: 1rem;
+        margin: 1rem;
+      }
+    </style>
   </head>
   <body>
     <h1>Talk Minion</h1>
+    <textarea
+      class="txtarea"
+      placeholder="Write your sentence which you want to convert in Minion Language"
+    ></textarea>
     <button class="js-btn">Click</button>
     <script src="index.js"></script>
   </body>
