wiring a div to show output

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         padding: 1rem;
         margin: 1rem;
       }
+      .output {
+        border: 1px solid black;
+        display: block;
+        width: 90%;
+        height: 10vh;
+        padding: 1rem;
+        margin: 1rem;
+      }
     </style>
   </head>
   <body>
@@ -20,6 +28,7 @@
       placeholder="Write your sentence which you want to convert in Minion Language"
     ></textarea>
     <button class="js-btn">Click</button>
+    <div class="output"></div>
     <script src="index.js"></script>
   </body>
 </html>
