output heading text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         padding: 1rem;
         margin: 1rem;
       }
+      .output-heading-text {
+        margin: 1rem;
+      }
     </style>
   </head>
   <body>
@@ -28,6 +31,7 @@
       placeholder="Write your sentence which you want to convert in Minion Language"
     ></textarea>
     <button class="js-btn">Click</button>
+    <div class="output-heading-text">Output will come here 👇</div>
     <div class="output"></div>
     <script src="index.js"></script>
   </body>
