name elements & add footer

--- a/index.html
+++ b/index.html
@@ -3,36 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <title>Minion Language</title>
-    <style>
-      textarea {
-        display: block;
-        width: 90%;
-        height: 10vh;
-        padding: 1rem;
-        margin: 1rem;
-      }
-      .output {
-        border: 1px solid black;
-        display: block;
-        width: 90%;
-        height: 10vh;
-        padding: 1rem;
-        margin: 1rem;
-      }
-      .output-heading-text {
-        margin: 1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Talk Minion</h1>
-    <textarea
-      class="txtarea"
-      placeholder="Write your sentence which you want to convert in Minion Language"
-    ></textarea>
-    <button class="js-btn">Click</button>
-    <div class="output-heading-text">Output will come here 👇</div>
-    <div class="output"></div>
+    <div class="first-div">
+      <h1>Talk Minion</h1>
+    </div>
+    <div class="second-div">
+      <textarea
+        class="txtarea"
+        placeholder="Write your sentence which you want to convert in Minion Language"
+      ></textarea>
+      <button class="js-btn button">Translate to Minion Language</button>
+      <div class="output-heading-text">Minion Output will come here 👇</div>
+      <div class="output"></div>
+      <footer>
+        <h3>About</h3>
+        <p>
+          Are you a fan of minions? Did you know that the gibberish they say is
+          an actual
+        </p>
+        <p>
+          language. Use the translator to convert your text from English to
+          Minion speak or
+        </p>
+        <p>Minion Language</p>
+      </footer>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
